--- a/Solution1/UI/页面/index.html
+++ b/Solution1/UI/页面/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />	
-	<title>关于 我</title>
+	<title>山东商务职业学院考勤系统 </title>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 </head>
 <body class="loading-process">
