--- a/Solution1/UI/页面/index.html
+++ b/Solution1/UI/页面/index.html
@@ -104,7 +104,7 @@
 				<div class="works-item fade fade2">
 						<img src="images/works/wxshop.jpg" alt="" width="300" height="180">
 						<a href="Default.aspx"><div class="work-info">
-                            <h2>管理员员界面</h2>
+                            <h2>教师界面</h2>
 							
 						</div>
 					</a>
